--- a/pytest.ini
+++ b/pytest.ini
@@ -10,7 +10,7 @@ addopts =
     --disable-warnings
     --cov-report=term-missing
     --cov-fail-under=80
-testpaths = employe api
+testpaths = tests
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests
