Test du déploiement avec notre service "Mini-application-de-gestion-des-employ-s"

--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -109,4 +109,4 @@ jobs:
         RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
       run: |
         # Déploiement avec création automatique de service
-        railway up --detach --create-service --service-name="gestion-employes-api"
+        railway up --detach --service "Mini-application-de-gestion-des-employ-s"
